@@ -1,5 +1,7 @@
 Possible compatibility problems with earlier versions marked with '*'.
 
+YAZ client enables setnames only if target supports it.
+
 *** ZOOM. Prefix for ZOOM definitions changed from Z3950_ to ZOOM_.
 
 * ZOOM. Removed Z3950_connection_host. Use Z3950_connection_option_get
